--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,32 +7,71 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/begin_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="开始烧录"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/user_btn_active_bg_selector"
+        android:textSize="15dp"
+        android:textColor="#ffffff"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
-    <!--android:id="@id/android:list"-->
-    <!--android:id="@+id/container"-->
-    <!--android:id="@+id/toolbar"-->
+    <TextView
+        android:id="@+id/deviceN"
+        android:text="设备名称"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#343434"
+        android:textSize="15dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintLeft_toLeftOf="@id/begin_btn"
+        app:layout_constraintTop_toBottomOf="@id/begin_btn"/>
+    <TextView
+        android:id="@+id/deviceName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#343434"
+        android:textSize="15dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="30dp"
+        app:layout_constraintLeft_toRightOf="@id/deviceN"
+        app:layout_constraintBottom_toBottomOf="@id/deviceN"
+        android:text="-- --"/>
 
-    <!--<android.support.design.widget.BottomNavigationView-->
-        <!--android:id="@+id/navigation"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginEnd="0dp"-->
-        <!--android:layout_marginStart="0dp"-->
-        <!--android:background="?android:attr/windowBackground"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--app:layout_constraintRight_toRightOf="parent"-->
-        <!--app:menu="@menu/navigation" />-->
+    <TextView
+        android:id="@+id/resultT"
+        android:text="操作结果："
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#343434"
+        android:textSize="15dp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@id/deviceN"
+        app:layout_constraintLeft_toLeftOf="@id/deviceN"/>
+    <ImageView
+        android:id="@+id/result_img"
+        android:src="@drawable/right3x"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:layout_constraintLeft_toLeftOf="@id/resultT"
+        app:layout_constraintTop_toBottomOf="@id/resultT" />
+    <TextView
+        android:id="@+id/result_text"
+        android:text="--"
+        android:textSize="20dp"
+        android:textColor="#343434"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toRightOf="@id/result_img"
+        app:layout_constraintBottom_toBottomOf="@id/result_img"/>
 
 
-    <ListView android:id="@android:id/list"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
 
-
-    <!--<FrameLayout-->
-        <!--android:id="@+id/zgsfragment"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="100dp">-->
-    <!--</FrameLayout>-->
 </android.support.constraint.ConstraintLayout>
