--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,29 @@
         app:layout_constraintBottom_toBottomOf="@id/deviceN"
         android:text="-- --"/>
 
+    <TextView
+        android:id="@+id/deviceR"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="设备信号值："
+        android:layout_marginTop="20dp"
+        android:textColor="#343434"
+        android:textSize="15dp"
+        app:layout_constraintLeft_toLeftOf="@+id/deviceN"
+        app:layout_constraintTop_toBottomOf="@+id/deviceN"/>
+
+    <TextView
+        android:id="@+id/deviceRSSI"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#343434"
+        android:textSize="15dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="30dp"
+        app:layout_constraintLeft_toRightOf="@id/deviceR"
+        app:layout_constraintBottom_toBottomOf="@id/deviceR"
+        android:text="--"/>
+
 
     <TextView
         android:id="@+id/write_tv"
@@ -54,8 +77,8 @@
         android:textColor="#343434"
         android:textSize="15dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintLeft_toLeftOf="@id/deviceN"
-        app:layout_constraintTop_toBottomOf="@id/deviceN"/>
+        app:layout_constraintLeft_toLeftOf="@id/deviceR"
+        app:layout_constraintTop_toBottomOf="@id/deviceR"/>
 
     <TextView
         android:id="@+id/write_text"
